--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <section id="Story">
 
 <div class="image-container">
-    <h3> How things goes on  here !</h3>
+    <h3> The Story Time !</h3>
     <p id = "p_box">Welcome to Whisk & Whimsy, your go-to hub for quick, easy, and delicious recipes! I believe that great food doesn’t 
         have to be complicated. With just 3 to 5 ingredients, you can create mouthwatering meals without spending hours in the kitchen or 
         breaking the bank.Whether you’re a beginner, a busy professional, or just someone who loves simple yet flavorful dishes, our recipes 
